okay back to niri, it's the best and i like it

--- a/home/hypr/hyprpaper.conf
+++ b/home/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
-preload = /home/robin/Pictures/wallpapers/lip.jpg
+preload = /home/robin/Downloads/l.jpg
 
 wallpaper {
     monitor = eDP-1
-    path = /home/robin/Pictures/wallpapers/lip.jpg
+    path = /home/robin/Downloads/l.jpg
     fit_mode = cover
 }
 
