--- a/home/hypr/hyprpaper.conf
+++ b/home/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
-preload = /home/robin/Downloads/l.jpg
+preload = /home/robin/Downloads/moon.jpg
 
 wallpaper {
     monitor = eDP-1
-    path = /home/robin/Downloads/l.jpg
+    path = /home/robin/Downloads/moon.jpg
     fit_mode = cover
 }
 
